<resources>

    <string name="app_name">TaeSDKDemo</string>
    <string name="open_web_view">打开WebView</string>
    <string name="showPage">打开页面</string>
    <string name="openAlipayAuth">打开支付宝授权</string>
    <string name="openTBAuth">打开手淘授权</string>
    <string name="opMember">会员DEMO</string>
    <string name="show_login">打开登录授权</string>
    <string name="logout">登出</string>
    <string name="open_promotions">打开Promotions</string>
     <string name="open_eticket">打开ETicket</string>
     <string name="upValue">This is Up Value</string>
    <string name="opItem">商品DEMO</string>
    <string name="show_item_detail">打开商品详情</string>
    <string name="open_taoke_detail">打开淘客商品</string>
    <string name="globalItem">全球商品DEMO</string>
    <string name="show_item_detail_global">打开商品详情（全球版）</string>
    <string name="open_taoke_detail_global">打开淘客商品（全球版）</string>
    <string name="show_item_detail_global_itemId">打开商品详情不混淆（全球版）</string>
    <string name="open_taoke_detail_global_itemId">打开淘客商品不混淆（全球版）</string>
    <string name="opCart">购物车DEMO</string>
    <string name="showCart">打开购物车</string>
    <string name="addItem2Cart">添加商品到购物车</string>
    <string name="addTaoKeItem2Cart">添加淘客商品到购物车</string>
    <string name="opOrder">订单DEMO</string>
    <string name="show_order">打开订单</string>
    <string name="showTaokeOrder">打开淘客订单</string>
    <string name="showOrderWithSKU">带sku选择页的商品下单接口</string>
    <string name="showKaoKeOrderWithSKU">带sku选择页的淘客下单接口</string>
    <string name="opRestartApp">重启应用</string>
    <string name="opApply">生效数据</string>
    <string name="opLogin">登陆</string>
    <string name="opMa">扫码DEMO</string>
    <string name="open_medicine_ma_view">打开药品监管码</string>
    <string name="open_good_ma_view">打开商品详情页</string>
    <string name="uploadFile">上传图片</string>
    <string name="openAMap">高德地图 DEMO</string>
    <string name="openGaodeMap3d">高德3D地图</string>
    <string name="openGaodeMap2d">高德2D地图</string>
    <string name="openGaodeRoute">高德路径规划</string>
    <string name="openGaodeGPSLocation">高德GPS定位</string>
    <string name="openGaodePOIKeywordSearch">高德POI关键字搜索</string>
    <string name="openGaodePOIAroundSearch">高德POI周边检索</string>
    <string name="openGaodeRouteSearch">高德路径检索(无地图)</string>
    <string name="opIMUI">OpenIMUI DEMO</string>
    <string name="opIMSDK">OpenIMSDK DEMO</string>
    <string name="opPic">上传图片</string>
    <string name="tae_sdk_login_qr_icon_taobao">&#xe6e9;</string>
    <string name="tae_sdk_login_qr_icon_close">&#xe645;</string>
    <string name="tae_sdk_qr_login_icon_scan">&#xe60a;</string>
    <string name="tae_sdk_qr_login_icon_password">&#xe635;</string>
    <string name="com_taobao_tae_sdk_qr_login_title_bar_text">淘宝账号登录</string>
    <string name="opOpenAccount">OpenAccount</string>
    <string name="opOpenTrade">OpenTrade</string>
    <string name="createOrder">创建订单</string>
    <string name="showPayOrder">订单支付</string>
    <string name="tokenLogin">ISV Token登录</string>
    
</resources>