<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/amapMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/openGaodeMap2d"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/openGaodeMap2d" />

    <Button
        android:id="@+id/openGaodeMap3d"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/openGaodeMap3d" />

    <Button
        android:id="@+id/openGaodeRoute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/openGaodeRoute" />

    <Button
        android:id="@+id/openGaodeGPSLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/openGaodeGPSLocation" />
    
    <Button
        android:id="@+id/openGaodePOIKeywordSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/openGaodePOIKeywordSearch" />
    
    <Button
        android:id="@+id/openGaodePOIAroundSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/openGaodePOIAroundSearch" />
    
    <Button
        android:id="@+id/openGaodeRouteSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/openGaodeRouteSearch" />

</LinearLayout>